prevent scrollbar shift

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,8 @@
   
   /* other utility colors */
   /* --color-border-default: var(--color-accent-primary); */
+
+  scrollbar-gutter: stable;
 }
 
 /* css reset */
